--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark">
     <title>Сложно сосредоточиться</title>
+    <link rel="icon" href="./images/favicon.ico">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css">
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -34,7 +44,118 @@
           </li>
         </ul>
       </nav>
+      <span class="header-border-bottom"></span>
+     <h1 class="title">no focus</h1>
+     <h2 class="page__description">Что делать, когда не можешь делать ничего Или почему нам так сложно сконцентрироваться, особенно когда очень надо</h2>
+     <span class="header-border-top"></span>
     </header>
+  <section class="hard-to-focus">
+    <h2 class="section-title why-title">Почему сосредоточиться так сложно</h2>
+  <div class="section-description why-description">
+    <h3 class="subtitle">Многозадачность</h3>
+    <p class="description-text">Особенно сложно сосредоточиться, когда задач много и все они — важные.
+      Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)?
+      А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно.
+      А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса».
+       Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+    <h3 class="subtitle">Дофамин</h3>
+    <p class="description-text">С гормонами стресса всё понятно, но дальше — ещё интереснее.
+       В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин.
+       Это вещество участвует в системе вознаграждения мозга. Причём тут он? 
+      Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях.
+       В это время и выделяется дофамин — и мы чувствуем удовольствие.
+       Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+  </div>
+  </section>
+  <section class="focus-decrease">
+    <h2 class="section-title decrease-title">Что снижает концентрацию<br>внимания?</h2>
+      <div class="card">
+      <h3 class="subtitle">Многозадачность</h3>
+      <p class="description-text">Как концентрация может снижаться из-за… концентрации?
+         Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. 
+         Например, читать новости вместо работы. Но быть собранными всё время — невозможно. 
+         Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+      </div>
+      <div class="card">
+      <h3 class="subtitle">Еда</h3>
+      <p class="description-text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. 
+        Но уходит эта энергия также быстро, как и приходит.
+        А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. 
+        И хотим ещё больше быстрых углеводов.</p>
+      </div>
+      <div class="card">
+      <h3 class="subtitle">Гаджеты</h3>
+      <p class="description-text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. 
+        В результате мозг пытается переключиться с одной задачи на другую — и просто не может. 
+        А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. 
+        Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+    </div>
+  </div>
+  </section>
+  <section class="focus__advises">
+    <h2 class="section-title advise-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+    <div class="section-description">
+      <h3 class="subtitle subtitle-advise">5 простых (на самом деле не очень) советов</h3>
+      <subtitle class="subtitle-advises">
+        Представьте небо и облака
+      </subtitle>
+      <p class="description-text">
+        Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
+        Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. 
+        В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. 
+        И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. 
+        Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
+      </p>
+      <subtitle class="subtitle-advises">
+        Включите музыку
+      </subtitle>
+      <p class="description-text">
+        Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. 
+        Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
+      </p>
+      <subtitle class="subtitle-advises">
+        Прогуляйтесь
+      </subtitle>
+      <p class="description-text">
+        Или даже пробегитесь. 
+        Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. 
+        Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. 
+        Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+      </p>
+      <subtitle class="subtitle-advises">
+        Хорошо ешьте
+      </subtitle>
+      <p class="description-text">
+        Мы — не ваша бабушка, но это правда важно. 
+        Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. 
+        Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+      </p>
+      <subtitle class="subtitle-advises">
+        Читайте
+      </subtitle>
+      <p class="description-text">
+        Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
+        А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
+      </p>
+    </div>
+  </section>
+  <section class="images-section">
+    <h2 class="section-title images-title">А можно в картинках?</h2>
+    <div class="images">
+      <img class="sunset-image" type="image" loading="lazy" alt="" src="./images/sunset.png">
+      <img class="ice-cream-image" type="image" loading="lazy" alt="" src="./images/ice-cream.png">
+      <img class="books-image" type="image" loading="lazy" alt="" src="./images/books.png">
+      <img class="tape-image" type="image" loading="lazy" alt="" src="./images/tape.png">
+      <img class="street-image" type="image" loading="lazy" alt="" src="./images/street.png">
+    </div>
+  </section>
+  <footer class="footer">
+    <span class="footer-border-top">
+
+    </span>
+    <h2 class="footer-text">focus</h2>
+    <span class="footer-border-bottom"></span>
+  </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
