Исправлены ошибки, на проверку 2

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 </ul>
             </nav>
             <div class="rec">rec</div>
-            <span class="header-border-bottom"></span>
+            <span class="decoration-border-top"></span>
             <h1 class="title">no focus</h1>
-            <h2 class="page__description">Что делать, когда не можешь делать ничего Или почему нам так сложно сконцентрироваться, особенно когда очень надо</h2>
-            <span class="header-border-top"></span>
+            <p class="page__description">Что делать, когда не можешь делать ничего Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+            <span class="decoration-border-bottom"></span>
         </header>
         <section class="hard-to-focus">
             <h2 class="section-title why-title">Почему сосредоточиться так сложно</h2>
@@ -62,7 +62,7 @@
         </section>
         <section class="focus-decrease">
             <h2 class="section-title decrease-title">
-                Что снижает концентрацию<br />
+                Что снижает концентрацию
                 внимания?
             </h2>
             <div class="card">
@@ -91,38 +91,38 @@
             <h2 class="section-title advise-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
             <div class="section-description">
                 <h3 class="subtitle subtitle-advise">5 простых (на самом деле не очень) советов</h3>
-                <subtitle class="subtitle-advises">
+                <h4 class="subtitle-advises">
                     Представьте небо и облака
-                </subtitle>
+                </h4>
                 <p class="description-text">
                     Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
                     представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
                     волноваться о потенциальных проблемах из будущего.
                 </p>
-                <subtitle class="subtitle-advises">
+                <h4 class="subtitle-advises">
                     Включите музыку
-                </subtitle>
+                </h4>
                 <p class="description-text">
                     Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в
                     «белым шумом» или нейромузыкой.
                 </p>
-                <subtitle class="subtitle-advises">
+                <h4 class="subtitle-advises">
                     Прогуляйтесь
-                </subtitle>
+                </h4>
                 <p class="description-text">
                     Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link" href="">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот
                     понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
                 </p>
-                <subtitle class="subtitle-advises">
+                <h4 class="subtitle-advises">
                     Хорошо ешьте
-                </subtitle>
+                </h4>
                 <p class="description-text">
                     Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис,
                     хлеб из цельнозерновой пшеницы.
                 </p>
-                <subtitle class="subtitle-advises">
+                <h4 class="subtitle-advises">
                     Читайте
-                </subtitle>
+                </h4>
                 <p class="description-text">
                     Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
                     направленное внимание.
@@ -132,17 +132,17 @@
         <section class="images-section">
             <h2 class="section-title images-title">А можно в картинках?</h2>
             <div class="images">
-                <img class="sunset-image" type="image" loading="lazy" alt="" src="./images/sunset.png" />
-                <img class="ice-cream-image" type="image" loading="lazy" alt="" src="./images/ice-cream.png" />
-                <img class="books-image" type="image" loading="lazy" alt="" src="./images/books.png" />
-                <img class="tape-image" type="image" loading="lazy" alt="" src="./images/tape.png" />
-                <img class="street-image" type="image" loading="lazy" alt="" src="./images/street.png" />
+                <img class="sunset-image" loading="lazy" alt="Закат на фоне гор" src="./images/sunset.png" />
+                <img class="ice-cream-image" loading="lazy" alt="Шарики мороженного в желтой миске" src="./images/ice-cream.png" />
+                <img class="books-image" loading="lazy" alt="Аудио кассета" src="./images/books.png" />
+                <img class="tape-image" loading="lazy" alt="Стопка книг с чашкой кофе наверху" src="./images/tape.png" />
+                <img class="street-image" loading="lazy" alt="Пустая улица" src="./images/street.png" />
             </div>
         </section>
         <footer class="footer">
-            <span class="footer-border-top"> </span>
+            <span class="decoration-border-top"> </span>
             <h2 class="footer-text">focus</h2>
-            <span class="footer-border-bottom"></span>
+            <span class="decoration-border-bottom"></span>
         </footer>
         <script src="./scripts/script.js"></script>
     </body>
