сделаны правки после ревью

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="rec">rec</div>
             <span class="decoration-border-top"></span>
             <h1 class="title">no focus</h1>
-            <p class="page__description">Что делать, когда не можешь делать ничего Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+            <p class="page__description">Что делать, когда не можешь делать ничего <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
             <span class="decoration-border-bottom"></span>
         </header>
         <section class="hard-to-focus">
